// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`controlsList 1`] = `
<span>
  Item 1
</span>
`;

exports[`controlsList 2`] = `
[
  <span>
    Item 1
  </span>,
  <span>
    Item 2
  </span>,
]
`;

exports[`controlsList 3`] = `
[
  <span>
    Item 3
  </span>,
  <span>
    Item 1
  </span>,
  <span>
    Item 2
  </span>,
]
`;

exports[`controlsList 4`] = `
[
  <span>
    Item 3
  </span>,
  <span>
    Item 1
  </span>,
]
`;

exports[`counterControl 1`] = `
<span>
  Control
</span>
`;

exports[`counterControl 2`] = `
[
  <p>
    Clicked: 
    10
     times
    <button
      onClick={[Function]}
    >
      +
    </button>
    <button
      onClick={[Function]}
    >
      -
    </button>
    <span>
      Menu
    </span>
  </p>,
  <div
    style={
      {
        "paddingLeft": 10,
      }
    }
  >
    <span>
      Control
    </span>
  </div>,
]
`;

exports[`counterControl 3`] = `
[
  <p>
    Clicked: 
    11
     times
    <button
      onClick={[Function]}
    >
      +
    </button>
    <button
      onClick={[Function]}
    >
      -
    </button>
    <span>
      Menu
    </span>
  </p>,
  <div
    style={
      {
        "paddingLeft": 10,
      }
    }
  >
    <span>
      Control
    </span>
  </div>,
]
`;

exports[`prepControl 1`] = `
{
  "f": [
    [
      "type",
      "MENU",
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          "Menu",
        ],
        "props": {
          "f": [
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "span",
      },
    ],
  ],
}
`;

exports[`prepControl 2`] = `
{
  "f": [
    [
      "type",
      "VALUE",
    ],
    [
      "value",
      10,
    ],
  ],
}
`;

exports[`prepControl 3`] = `
{
  "f": [
    [
      "type",
      "CONTROL",
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          "Control",
        ],
        "props": {
          "f": [
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "span",
      },
    ],
  ],
}
`;

exports[`prepControl 4`] = `
{
  "f": [
    [
      "type",
      "COLLECTION",
    ],
    [
      "value",
      {
        "f": [
          [
            "MENU",
            {
              "$": "ReactElement",
              "children": [
                "Menu",
              ],
              "props": {
                "f": [
                  [
                    "children",
                    {
                      "$": "undefined",
                    },
                  ],
                ],
              },
              "type": "span",
            },
          ],
          [
            "VALUE",
            10,
          ],
          [
            "CONTROL",
            {
              "$": "ReactElement",
              "children": [
                "Control",
              ],
              "props": {
                "f": [
                  [
                    "children",
                    {
                      "$": "undefined",
                    },
                  ],
                ],
              },
              "type": "span",
            },
          ],
        ],
      },
    ],
  ],
}
`;

exports[`prepControl 5`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`prepControl 6`] = `
{
  "f": [
    [
      "type",
      "VALUE",
    ],
    [
      "value",
      11,
    ],
  ],
}
`;

exports[`prepControl 7`] = `
{
  "f": [
    [
      "type",
      "COLLECTION",
    ],
    [
      "value",
      {
        "f": [
          [
            "MENU",
            {
              "$": "ReactElement",
              "children": [
                "Menu",
              ],
              "props": {
                "f": [
                  [
                    "children",
                    {
                      "$": "undefined",
                    },
                  ],
                ],
              },
              "type": "span",
            },
          ],
          [
            "VALUE",
            11,
          ],
          [
            "CONTROL",
            {
              "$": "ReactElement",
              "children": [
                "Control",
              ],
              "props": {
                "f": [
                  [
                    "children",
                    {
                      "$": "undefined",
                    },
                  ],
                ],
              },
              "type": "span",
            },
          ],
        ],
      },
    ],
  ],
}
`;

exports[`prepControl 8`] = `
{
  "f": [
    [
      "type",
      "FLUSH",
    ],
  ],
}
`;

exports[`totals 1`] = `
<b>
  Total 
  1
</b>
`;

exports[`totals 2`] = `
<b>
  Total 
  11
</b>
`;

exports[`totals 3`] = `
<b>
  Total 
  111
</b>
`;

exports[`totals 4`] = `
<b>
  Total 
  101
</b>
`;
